--- a/navigation.html
+++ b/navigation.html
@@ -61,7 +61,7 @@
         <hr>
         <li class="nav-item sidebar-item">
           <a class="nav-link text-secondary" href="#">
-            <i class="fas fa-cloud-upload-alt"></i> Submit
+            <i class="fas fa-cloud-upload-alt"></i> 提交申请
           </a>
         </li>
       </ul>
