--- a/navigation.html
+++ b/navigation.html
@@ -22,6 +22,14 @@
 
   </head>
   <body>
+    <div id="top-navbar-template">
+      <a class="navbar-brand col-md-3 col-lg-2 me-0 px-4" href="#">DreamMa</a>
+      <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+    </div>
+
 
     <div id="sidebarMenu-template" class="position-sticky pt-3 ">
       <ul class="nav flex-column ">
@@ -61,7 +69,7 @@
         <hr>
         <li class="nav-item sidebar-item">
           <a class="nav-link text-secondary" href="#">
-            <i class="fas fa-cloud-upload-alt"></i> 提交申请
+            <i class="fas fa-cloud-upload-alt"></i> Submit
           </a>
         </li>
       </ul>
