--- a/navigation.html
+++ b/navigation.html
@@ -21,14 +21,17 @@
 
 
   </head>
-  <body>
-    <div id="top-navbar-template">
-      <a class="navbar-brand col-md-3 col-lg-2 me-0 px-4" href="#">DreamMa</a>
-      <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-    </div>
+  <header id="top-navbar-template">
+    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-4" href="#">DreamMa</a>
+    <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+  </header>
+
+  <body>
+    
 
 
     <div id="sidebarMenu-template" class="position-sticky pt-3 ">
