--- a/navigation.html
+++ b/navigation.html
@@ -34,9 +34,9 @@
   </div>
 
 
-   <div class="offcanvas offcanvas-start" tabindex="-1" id="sidebarMenu-template" aria-labelledby="sidebarMenu-templateLabel">
+  <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
         <div class="offcanvas-header pb-0">
-          <h5 class="offcanvas-title" id="sidebarMenu-templateLabel">DreamMa</h5>
+          <h5 class="offcanvas-title" id="offcanvasExampleLabel">DreamMa</h5>
           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body pt-0">
@@ -55,9 +55,9 @@
               </li>
 
               <li class="nav-item my-1">
-                <div class="accordion accordion-flush " id="allDocumentation">
+                <div class="accordion accordion-flush " id="accordionFlushExample">
                   <div class="accordion-item ">
-                    <h2 class="accordion-header" id="allDocumentation-headingOne">
+                    <h2 class="accordion-header" id="flush-headingOne">
                       <button class="accordion-button collapsed text-secondary nav-document-heading fs-5" type="button" data-bs-toggle="collapse" data-bs-target="#nav-document" aria-expanded="false" aria-controls="nav-document">
                         <i class="fas fa-file-alt nav-document-icon me-2"></i>
                         文书准备
@@ -85,6 +85,5 @@
           </div>
         </div>
       </div>
-
   </body>
 </html>
